<resources>

    <string name="app_name">XBMC Companion</string>
    <string name="title_section3">Cast</string>
    <string name="title_section2">Plot</string>
    <string name="title_section1">Now Playing</string>
    <string name="settings_infos">First, please ensure you have enabled HTTP in XBMC, then blabla, then blablabla…</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">XBMC Companion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_label_ip">IP address</string>
    <string name="settings_label_port">Port number</string>
    <string name="settings_label_username">Username</string>
    <string name="settings_label_password">Password</string>
    <string name="settings_label_connectivity">Connectivity</string>
    <string name="settings_ip">ip</string>
    <string name="settings_port">port</string>
    <string name="settings_username">username</string>
    <string name="settings_password">password</string>
    <string name="settings_autopause">autopause</string>
    <string name="menu_refresh">Refresh</string>
    <string name="settings_label_options">Options</string>
    <string name="settings_label_autopause">Auto-pause</string>
    <string name="settings_label_autopause_long">Automatically pauses video on launch/refresh</string>
    <string name="settings_label_about">About</string>
    <string name="settings_label_about_long">Alexandre \&quot;iksela\&quot; Mathieu</string>
    <string name="settings_label_about_long2">Contact me: iksela@gmail.com</string>
    <string name="menu_playpause">Play/Pause</string>
    <string name="status_paused">Paused</string>
    <string name="status_playing">Resuming</string>
    <string name="error">Unknown error</string>
    <string name="error_novideoplayer">No videoplayer is currently on.</string>
    <string name="error_unreachable">Couldn\'t connect to XBMC.</string>
    <string name="test">"I come from Byfleet," he said; "man on a bicycle came through the place in the early morning, and ran from door to door warning us to come away.  Then came soldiers.  We went out to look, and there were clouds of smoke to the south—nothing but smoke, and not a soul coming that way.  Then we heard the guns at Chertsey, and folks coming from Weybridge.  So I\'ve locked up my house and come on." At the time there was a strong feeling in the streets that the authorities were to blame for their incapacity to dispose of the invaders without all this inconvenience. About eight o\'clock a noise of heavy firing was distinctly audible all over the south of London.  My brother could not hear it for the traffic in the main thoroughfares, but by striking through the quiet back streets to the river he was able to distinguish it quite plainly. He walked from Westminster to his apartments near Regent\'s Park, about two.  He was now very anxious on my account, and disturbed at the evident magnitude of the trouble.  His mind was inclined to run, even as mine had run on Saturday, on military details.  He thought of all those silent, expectant guns, of the suddenly nomadic countryside; he tried to imagine "boilers on stilts" a hundred feet high. There were one or two cartloads of refugees passing along Oxford Street, and several in the Marylebone Road, but so slowly was the news spreading that Regent Street and Portland Place were full of their usual Sunday-night promenaders, albeit they talked in groups, and along the edge of Regent\'s Park there were as many silent couples "walking out" together under the scattered gas lamps as ever there had been.  The night was warm and still, and a little oppressive; the sound of guns continued intermittently, and after midnight there seemed to be sheet lightning in the south. He read and re-read the paper, fearing the worst had happened to me. He was restless, and after supper prowled out again aimlessly.  He returned and tried in vain to divert his attention to his examination notes.  He went to bed a little after midnight, and was awakened from lurid dreams in the small hours of Monday by the sound of door knockers, feet running in the street, distant drumming, and a clamour of bells.  Red reflections danced on the ceiling.  For a moment he lay astonished, wondering whether day had come or the world gone mad. Then he jumped out of bed and ran to the window. His room was an attic and as he thrust his head out, up and down the street there were a dozen echoes to the noise of his window sash, and heads in every kind of night disarray appeared.  Enquiries were being shouted.  "They are coming!" bawled a policeman, hammering at the door; "the Martians are coming!" and hurried to the next door. The sound of drumming and trumpeting came from the Albany Street Barracks, and every church within earshot was hard at work killing sleep with a vehement disorderly tocsin.  There was a noise of doors opening, and window after window in the houses opposite flashed from darkness into yellow illumination. Up the street came galloping a closed carriage, bursting abruptly into noise at the corner, rising to a clattering climax under the window, and dying away slowly in the distance.  Close on the rear of this came a couple of cabs, the forerunners of a long procession of flying vehicles, going for the most part to Chalk Farm station, where the North-Western special trains were loading up, instead of coming down the gradient into Euston. For a long time my brother stared out of the window in blank astonishment, watching the policemen hammering at door after door, and delivering their incomprehensible message.  Then the door behind him opened, and the man who lodged across the landing came in, dressed only in shirt, trousers, and slippers, his braces loose about his waist, his hair disordered from his pillow. "What the devil is it?" he asked.  "A fire?  What a devil of a row!" They both craned their heads out of the window, straining to hear what the policemen were shouting.  People were coming out of the side streets, and standing in groups at the corners talking. "What the devil is it</string>
    <string name="loading">Loading…</string>
    <string name="loading_connect">Connecting to XBMC…</string>
    <string name="loading_data">Acquiring data…</string>
    <string name="loading_data_format">Formatting data…</string>

</resources>