<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:robobunny="http://robobunny.com">

    <PreferenceCategory android:title="@string/settings_label_connectivity" >
        <EditTextPreference
            android:key="@string/settings_ip"
            android:title="@string/settings_label_ip" />
        <EditTextPreference
            android:defaultValue="80"
            android:key="@string/settings_port"
            android:title="@string/settings_label_port" />
        <EditTextPreference
            android:key="@string/settings_username"
            android:title="@string/settings_label_username" />
        <EditTextPreference
            android:key="@string/settings_password"
            android:title="@string/settings_label_password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_options" >
        <SwitchPreference
            android:key="@string/settings_autopause"
            android:defaultValue="true"
            android:summary="@string/settings_label_autopause_long"
            android:title="@string/settings_label_autopause" />
        <com.robobunny.SeekBarPreference
            android:key="@string/settings_darkness"
                android:title="@string/settings_label_darkness"
                android:summary="@string/settings_label_darkness_long"
                android:defaultValue="25"
                android:max="100"
                robobunny:min="0"
            	robobunny:unitsLeft=""
                robobunny:unitsRight="%"
            />
        <SwitchPreference android:key="@string/settings_debug" android:defaultValue="false" android:title="@string/settings_label_debug" android:summary="@string/settings_label_debug_long"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_about" >
        <Preference
            android:summary="@string/settings_label_about_long2"
            android:title="@string/settings_label_about_long" />
    </PreferenceCategory>

</PreferenceScreen>